--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "<h3>A food order app  build with React.js .</h3>\r <img src=\"https://github.com/atharvakutwal2002/Biryani-House/blob/main/src/assets/screencapture-biryani-house-1-netlify-app-2022-07-23-21_18_32.png\" />\r <img src=\"https://github.com/atharvakutwal2002/Biryani-House/blob/main/src/assets/screencapture-biryani-house-1-netlify-app-2022-07-23-21_19_08.png\"/>\r <img src=\"https://github.com/atharvakutwal2002/Biryani-House/blob/main/src/assets/screencapture-biryani-house-1-netlify-app-2022-07-23-21_19_27.png\"/>\r # Getting Started with Create React App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-dom": "^18.2.0",
+    "react": "^18.0.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.7",
+    "react-typical": "^0.1.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0"
   },
   "browserslist": {
     "production": [
@@ -26,8 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-dom": "^18.2.7"
   }
 }
