--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-router-dom": "^6.15.0",
+    "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
     "react-typical": "^0.1.3",
